# talktex

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  create-release.sh  listen.py  make-all.sh  make.sh  meson.build  meson_options.txt  release-paths.txt  run-grammar.sh  run-latex-generator.sh  setup-302_306.sh  setup-common.sh  setup-ubuntu.sh  talktex  text-to-latex-pdf  text-to-latex-pdf.sh  user_specification.md  version_extractor.sh  vocabulary.txt
create-scorer/: phrases.txt
docs/: grammar.md  guide.md
latex/: .gitignore
latex/talktex-output/: talktex.sty
speech/: .gitignore  compiler.py  generator.py  listen.py  parser.py  talktex.py  talktex.scorer
speech/latex-output/: pdflatex22925.fls  talktex.fdb_latexmk  talktex.fls  talktex.tex
src/: text-to-latex-pdf.sh
src/compiler/: MESON.md  make.sh  meson.build  run-grammar.sh  run-latex-generator.sh
src/compiler/src/general/src/public/: logger.h
src/compiler/src/grammar/: meson.build
src/compiler/src/grammar/src/: meson.build
src/compiler/src/grammar/src/cpp/: grammar.cpp
src/compiler/src/grammar/src/flex_bison/: compiler.l  compiler.y
src/compiler/src/grammar/src/public/: syntax_visitor.h
src/compiler/src/latex-generator/src/cpp/: latex_generation.cpp
src/compiler/src/latex-generator/src/cpp/entrypoint/: main.cpp
src/compiler/src/latex-generator/src/public/: latex_generation.h
src/compiler/subprojects/tclap-1.4.0-rc1_vendored/: meson.build
src/deepspeech/: meson.build
src/general/: meson.build
src/general/src/: meson.build
src/general/src/cpp/: io_util.cpp
src/general/src/cpp/logger/: logger.cpp
src/general/src/public/: aec_styles.h  aecpp.h  io_util.h  logger.h
src/general/src/public/avds/: deep_ptr.h
src/general/src/public/avds/tree/: tree.h  tree_algorithms.h  tree_output.h
src/grammar/: meson.build
src/grammar/src/: meson.build
src/grammar/src/cpp/: grammar.cpp  latex_generation.cpp  syntax_tree.cpp  syntax_visitor.cpp
src/grammar/src/cpp/entrypoint/: main.cpp
src/grammar/src/cpp/visitor/: syntaxvisitor.cpp  syntaxvisitor.h
src/grammar/src/flex_bison/: compiler.l  compiler.y
src/grammar/src/public/: construction.h  grammar.h  latex_generation.h  syntax_tree.h  syntaxtree.h  syntaxvisitor.h
src/latex/: render-latex.sh  talktex.sty
src/latex-generator/: meson.build
src/latex-generator/src/: meson.build
src/latex-generator/src/cpp/: latex_generation.cpp
src/latex-generator/src/cpp/entrypoint/: main.cpp
src/latex-generator/src/public/: latex_generation.h
src/talktex/: .gitignore
src/talktex/deepspeech/: talktex.scorer
src/talktex/deepspeech/create-scorer/: readme.md
src/talktex/src/: compiler.py  generator.py  parser.py  talktex.py
